--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -635,17 +635,17 @@ input::placeholder {
     width: auto;
     justify-content: center;
     align-items: center;
+
 }
 
-
 .table-container {
-    width: 55%;
+    width: 100%;
+    max-width: 800px;
     margin-top: auto;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    background-color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    height: 55vh;
 }
 
 .linhaPrincipal{
@@ -656,24 +656,26 @@ input::placeholder {
     gap: 2vh;
 }
 
+.produtos{
+    margin-bottom: 1.6vh;
+
+}
 .row {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid #FFCC00;
+    border-radius:0.5vw;
     padding: 15px 20px;
-    border-bottom: 1px solid #f0f0f0;
     cursor: pointer;
     background-color: #f5f5f5;
-}
-
-.row:hover {
-    background-color: #f5f5f5;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
 }
 
 .cell {
     display:flex;
     flex-direction: column;
-   column-gap: 2vh;
     text-align: left;
     color: black;
 }
@@ -689,8 +691,15 @@ input::placeholder {
     font-weight: bold;
 }
 
+.details-row {
+    display: none;
+    flex-direction: row;
+    padding: 15px 20px;
+    background-color: #fff7e6;
+    border-top: 3px solid #ffcc00;
+}
 
-.detailsRow {
+.details-left {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -699,7 +708,7 @@ input::placeholder {
     padding-right: 20px;
 }
 
-.detailsRow .image-placeholder {
+.details-left .image-placeholder {
     width: 100px;
     height: 100px;
     border: 2px dashed #ffcc00;
@@ -708,12 +717,12 @@ input::placeholder {
     align-items: center;
 }
 
-.detailsRow .image-placeholder img {
+.details-left .image-placeholder img {
     width: 50px;
     height: 50px;
 }
 
-.detailsRow {
+.details-right {
     flex: 2;
     padding-left: 20px;
 }
