--- a/public/css/financeiro.css
+++ b/public/css/financeiro.css
@@ -1,19 +1,23 @@
-/* TUDO CERTO */
-
-/* Reset */
-body {
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     font-family: "Inter", serif;
-    background-color: F0F0F0;
 }
+
+body {
+    background-color: #F0F0F0;
+    height: 100vh;
+}
+
 
 /* CABEÇALHO */
 .texto-nav{
     color: #FFCC00;
 }
 
-.sidebar ul li #finan:hover {
+.sidebar ul li #finan{
     color: #FFCC00;
 
     & .financial {
@@ -29,7 +33,6 @@ body {
 .financeiro{
     background-color: #000;
 }
-
 /* Barra de busca alinhada em linha */
 #barradebusca {
     display: flex;
@@ -263,9 +266,7 @@ select:hover option:hover {
     cursor: pointer;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 #caixa-recebimento {
     width: 9vh;
     height: 9vh;
@@ -476,7 +477,6 @@ select:hover option:hover {
     font-size: 16px;
     font-weight: 520;
     height: auto;
-    background-color: white;
     color: #FFCC00;
     margin-top: -65.7vh;
     cursor: pointer;
@@ -582,7 +582,7 @@ select:hover option:hover {
     border-radius:0.5vw;
     padding: 15px 20px;
     cursor: pointer;
-    background-color: #f5f5f5;
+    background-color: white;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 5px; /* Adiciona um pequeno espaçamento entre as linhas principais */
 }
