--- a/public/css/edicao.css
+++ b/public/css/edicao.css
@@ -1,6 +1,42 @@
-*{
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Inter", serif;
+}
+
+body {
     background-color: #F0F0F0;
+    height: 100vh;
+}
+
+/* CABEÇALHO */
+.texto-nav{
+    color: #DA0000;
+}
+
+.sidebar ul li #edicao{
+    color: #DA0000;
+
+    & .pencil {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M4.333 16.048L16.57 3.81a2.56 2.56 0 0 1 3.62 3.619L7.951 19.667a2 2 0 0 1-1.022.547L3 21l.786-3.93a2 2 0 0 1 .547-1.022'/%3E%3Cpath d='m14.5 6.5l3 3'/%3E%3C/g%3E%3C/svg%3E");
+        background-color: currentColor;
+        -webkit-mask-image: var(--svg);
+        mask-image: var(--svg);
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+        -webkit-mask-size: 100% 100%;
+        mask-size: 100% 100%;
+
+    }
+
+}
+
+.edicao{
+    background-color: #000;
 }
 
 .cabeca {
