--- a/public/css/saidas.css
+++ b/public/css/saidas.css
@@ -58,27 +58,47 @@ body {
     gap: 0.5rem; /* Espaçamento entre o botão e a barra de pesquisa */
 }
 
+/* --------------------Filtro--------------------- */
+
 #filtrar {
+    /* ----------------------------------------- */
+    height: 5.5vh;
+    width: 8.2vw;
+    /* ----------------------------------------- */
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    height: 3vh;
-    width: auto; /* Ajuste automático ao conteúdo */
-    padding: 0.5rem 1rem;
-    background-color: #fff;
-    border-radius: 1vh;
-    border: 1px solid #ccc;
-    box-shadow: 0.1em 0.1em;
-    font-weight: 400;
+    /* ----------------------------------------- */
+    padding-left: 0.5%;
+    margin-right: 1%;
+    /* ----------------------------------------- */
+    font-family: "Inter", sans-serif;
+    font-size: clamp(2vh, 1.25vw, 3vh);
+    /* ----------------------------------------- */
+    background-color: white;
+    border-radius: 1.3vh;
     cursor: pointer;
-    gap: 0.5rem; /* Espaçamento entre ícone e texto */
+    border: transparent;
+    box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
 }
 
-/* Ícone no botão Filtrar */
-#filtrar i {
-    font-size: 1.2em;
-    color: #FFCC00;
+#fil {
+    /* ----------------------------------------- */
+    height: 70%;
+    /* ----------------------------------------- */
+    background-color: white;
 }
+
+#filtrar:hover {
+    transform: scale(1.03);
+}
+
+textarea:focus,
+input:focus,
+select:focus {
+    outline: 0;
+}
+
 
 /* Barra de entrada */
 #entrada {
@@ -92,20 +112,72 @@ body {
 }
 
 /* Botão Pesquisar */
+#pesquisa {
+    /* ----------------------------------------- */
+        height: 5.4vh;
+        width: 55.10vw;
+    /* ----------------------------------------- */
+    
+        padding-left: 0.5%;
+    /* ----------------------------------------- */
+        font-family: "Inter", sans-serif;
+        font-size: clamp(2.25vh,1.5vw,3.25vh); 
+    /* ----------------------------------------- */
+        background-color: white;
+        border-radius: 1.3vh;
+        cursor: pointer;
+        border: transparent;
+        box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
+    
+    }
+    
+    textarea:focus, input:focus, select:focus {
+        outline: 0;
+    }
+
 #pesquisar {
+    /* ----------------------------------------- */
+    height: 5.5vh;
+    width: 10.7vw;
+    /* ----------------------------------------- */
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    height: 4vh;
-    width: auto; /* Ajuste automático ao conteúdo */
-    padding: 0.5rem 1rem;
-    background-color: #fff;
-    border-radius: 1vh;
-    border: 1px solid #ccc;
-    box-shadow: 0.1em 0.1em;
-    font-weight: 300;
+    /* ----------------------------------------- */
+    padding-left: 0.5%;
+    margin-left: 1%;
+    /* ----------------------------------------- */
+    font-family: "Inter", sans-serif;
+    font-size: clamp(2vh, 1.25vw, 3vh);
+    /* ----------------------------------------- */
+    background-color: white;
+    border-radius: 1.3vh;
     cursor: pointer;
+    border: transparent;
+    box-shadow: 0.1vw 0.3vh 0.4vw 0.1vw rgba(0, 0, 0, 0.2);
 }
+
+#pes {
+    /* ----------------------------------------- */
+    height: 50%;
+    /* ----------------------------------------- */
+    background-color: white;
+}
+
+#pesquisar:hover {
+    transform: scale(1.03);
+}
+
+textarea:focus,
+input:focus,
+select:focus {
+    outline: 0;
+}
+
+#formPesquisa #pesquisa::placeholder {
+    font-size: 2.7vh;
+    padding: 1.2vh;
+  }
 
 /* Dropdowns nos filtros */
 select {
@@ -190,7 +262,8 @@ select {
     background-color: #FFCC00;
     border-color: transparent;
     border-radius: 0.5vh;
-    appearance: none; /* remove a seta padrao do select */
+    appearance: none;
+    /* remove a seta padrao do select */
     cursor: pointer;
 }
 
@@ -238,7 +311,7 @@ select:hover option:hover {
 
 /* acabou mudanças */
 #entrada {
-    
+   
     z-index: 1;
     width: 40vw;
     height: 4vh;
@@ -258,327 +331,8 @@ select:hover option:hover {
     outline: 0;
 }
 
-#pesquisar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 4vh;
-    width: 8vw;
-    background-color: #ffff;
-    border-radius: 1vh;
-    box-shadow: 0.1em 0.1em;
-    border: 1px solid #ccc; /* Borda para consistência */
-    font-weight: 300;
-    cursor: pointer;
-}
-/******************************************/
-.navbar-caixa {
-
-    width: 100%;
-    height: 10vh;
-    background-color: #FDFDFD;
-    box-shadow: 1vh 0 3vh #a0a0a0;
 
 
-}
-
-/* INSERIR NO SEU CSS "color:" */
-.texto-nav {
-    font-size: 4.5vh;
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    padding: 1vh;
-    color: #FFCC00;
-    padding-right: 41.5vw;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-
-
-
-.menu-btn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: transparent;
-    color: rgb(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    font-size: 7vh;
-    display: flex;
-    padding-left: 5vh;
-    padding-bottom: vh;
-
-
-
-}
-
-
-.conteudo-nav {
-
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: space-between;
-
-}
-
-/******************************************/
-/* Sidebar */
-
-
-
-.sidebar {
-    height: 100%;
-    width: 350px;
-    position: fixed;
-    top: 0;
-    left: -350px;
-    /* Escondido por padrão */
-    background-color: #0f0f0f;
-    color: white;
-    overflow-x: hidden;
-    transition: 0.3s;
-    padding-top: 20px;
-    font-size: 2vh;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.sidebar img {
-    align-self: center;
-    padding-left: 4vw;
-    padding-top: 1vw;
-    color: #f1f1f1;
-}
-
-.sidebar h3 {
-    margin-left: 1.5vw;
-    margin-top: 30px;
-    font-size: 1vw;
-    color: #f1f1f1;
-    padding: 10px 0;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.sidebar ul {
-    list-style: none;
-    padding: 0;
-}
-
-.sidebar ul li {
-    display: flex;
-    align-items: center;
-    padding: 18px 50px;
-    font-weight: 300;
-    cursor: pointer;
-    font-size: 1.4vw;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.sidebar ul li a {
-    color: #f1f1f1;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.sidebar ul li a div {
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.sidebar ul li a span {
-    margin-left: 20px;
-    /* Distância entre ícone e texto */
-}
-
-.sidebar ul li:hover,
-.sidebar ul li a:hover {
-    background-color: #000;
-    border-radius: 5px;
-    color: inherit;
-}
-
-.sidebar ul li:hover div {
-    transform: scale(1.3);
-    /* Efeito de zoom no ícone */
-    transition: transform 0.3s ease;
-}
-
-.sidebar h4 {
-    display: flex;
-    justify-self: center;
-    align-self: baseline;
-    margin-top: 260px;
-    font-size: 0.75em;
-    font-weight: 300;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.container-logos #logo-gato{
-    align-items: center;
-    width: 40%;
-}
-
-.container-logos #logo-cubo{
-    width: 32%;
-}
-
-/* Estilos específicos de hover */
-.sidebar ul li #home:hover {
-    color: #E65332;
-    font-weight: 300;
-
-    & .home {
-        display: inline-block;
-        width: 1.3em;
-        height: 1.3em;
-        background-repeat: no-repeat;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23e65332' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath d='M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8'/%3E%3Cpath d='M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z'/%3E%3C/g%3E%3C/svg%3E");
-    }
-}
-
-.sidebar ul li #cadas:hover {
-    color: #50CD58;
-    font-weight: 300;
-
-    & .box-of-good-good {
-        display: inline-block;
-        width: 1.3em;
-        height: 1.3em;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%2350cd58' d='m17.578 4.432l-2-1.05C13.822 2.461 12.944 2 12 2s-1.822.46-3.578 1.382l-.321.169l8.923 5.099l4.016-2.01c-.646-.732-1.688-1.279-3.462-2.21m4.17 3.534l-3.998 2V13a.75.75 0 0 1-1.5 0v-2.286l-3.5 1.75v9.44c.718-.179 1.535-.607 2.828-1.286l2-1.05c2.151-1.129 3.227-1.693 3.825-2.708c.597-1.014.597-2.277.597-4.8v-.117c0-1.893 0-3.076-.252-3.978M11.25 21.904v-9.44l-8.998-4.5C2 8.866 2 10.05 2 11.941v.117c0 2.525 0 3.788.597 4.802c.598 1.015 1.674 1.58 3.825 2.709l2 1.049c1.293.679 2.11 1.107 2.828 1.286M2.96 6.641l9.04 4.52l3.411-1.705l-8.886-5.078l-.103.054c-1.773.93-2.816 1.477-3.462 2.21'/%3E%3C/svg%3E");
-    }
-}
-
-
-.sidebar ul li #edicao:hover {
-    color: #DA0000;
-    font-weight: 300;
-
-    & .pencil {
-        display: inline-block;
-        width: 1.3em;
-        height: 1.3em;
-        --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M4.333 16.048L16.57 3.81a2.56 2.56 0 0 1 3.62 3.619L7.951 19.667a2 2 0 0 1-1.022.547L3 21l.786-3.93a2 2 0 0 1 .547-1.022'/%3E%3Cpath d='m14.5 6.5l3 3'/%3E%3C/g%3E%3C/svg%3E");
-        background-color: currentColor;
-        -webkit-mask-image: var(--svg);
-        mask-image: var(--svg);
-        -webkit-mask-repeat: no-repeat;
-        mask-repeat: no-repeat;
-        -webkit-mask-size: 100% 100%;
-        mask-size: 100% 100%;
-
-    }
-
-}
-
-.sidebar ul li #esto:hover {
-    color: #319DF6;
-    font-weight: 300;
-
-    & .boxes-of-good-good {
-        display: inline-block;
-        width: 1.3em;
-        height: 1.3em;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23319df6' d='M10 4v11h12V4zm2 2h2v4l2-2l2 2V6h2v7h-8zM3 17v11h12V17zm14 0v11h12V17zM5 19h2v4l2-2l2 2v-4h2v7H5zm14 0h2v4l2-2l2 2v-4h2v7h-8z'/%3E%3C/svg%3E");
-    }
-}
-
-.sidebar ul li #finan:hover {
-    color: #FFCC00;
-    font-weight: 300;
-
-    & .financial {
-        display: inline-block;
-        width: 1.3em;
-        height: 1.3em;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2048 2048'%3E%3Cpath fill='%23ffcc00' d='m0 1898l384-384v534H0zm512-512l384-384v1046H512zm1280-490h128v1152h-384v-918zm-448 426l64-64v790h-384V1002zm704-1066v512h-128V475l-576 575l-384-384L0 1627v-182l960-959l384 384l485-486h-293V256z'/%3E%3C/svg%3E");
-    }
-}
-
-.container-img{
-    display: flex;
-    gap: 1px;
-    flex-direction: row;
-    width: 100%;
-}
-
-.container-img img{
-    display: flex;
-    gap: 1px;
-    justify-self: center;
-    width: 10vh;
-    height: 10vh;
-}
-
-/* Close Button */
-.close-btn {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 25px;
-    background: none;
-    color: black;
-    border: none;
-    cursor: pointer;
-}
-
-/* Content */
-.content {
-    margin-left: 0;
-    padding: 20px;
-    transition: margin-left 0.3s;
-}
-
-
-
-
-
-/* Responsividade */
-@media (max-width: 768px) {
-    .sidebar {
-        width: 250px;
-    }
-
-    .sidebar ul li a {
-        font-size: 1em;
-    }
-
-    .menu-btn {
-        padding: 8px 10px;
-        font-size: 18px;
-    }
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 #caixa-recebimento {
     width: 9vh;
     height: 9vh;
@@ -593,7 +347,7 @@ select:hover option:hover {
     justify-content: center;
     align-items: center;
     margin-top: 60vh;
-    margin-right:16vh ;
+    margin-right: 16vh;
     justify-self: right;
     padding-bottom: 0.5%;
 }
@@ -606,39 +360,94 @@ select:hover option:hover {
 
 /* Estilos do formulário (inicialmente oculto) */
 #formContainer {
-    position: absolute;
+    display: none;
     display: none;
     justify-self: center;
     align-self: center;
     z-index: 999;
+    position: absolute;
     padding-bottom: 20px;
     font-family: 'poppins', sans-serif;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
+    background-color: white;
     align-self: center;
     justify-self: center;
     max-width: 450px;
     width: 100%;
-    margin-top: -70vh;
+    margin-top: -72vh;
     z-index: 99999;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
     margin-left: 38%;
 }
 
+#formContainer #close-btn{
+    color: #000;
+}
 
 #formContainer h2{
+    padding-top: 2vh;
     justify-self: center;
-    font-size: 4vh;
+    font-size: 3.6vh;
+    font-weight: 450;
     z-index: 9911119;
 }
 
 /* Estilos do campo de input */
-/* Estilo dos campos do formulário com classes específicas */
 .input-container {
-    width: 100%; /* Garante que o campo ocupe 100% da largura */
     position: relative;
-    margin-bottom: 3vh;
-    
+    margin-bottom: 20px;
+    z-index: 991119;
+}
+
+#registrationForm input {
+    display: flex;
+    justify-self: center;
+    align-content: center;
+    margin-left: 1vw;
+    width: 80%;
+    padding: 12px;
+    font-size: 16px;
+    font-family: 'poppins', sans-serif;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    outline: none;
+    z-index: 9911119;
+}
+
+#registrationForm input:focus {
+    border-color: #FFCC00;
+    z-index: 911199;
+    box-shadow: 1px 1px 1px 1px #e2b500;
+}
+
+/* Estilos das labels */
+#registrationForm label {
+    position: absolute;
+    top: 50%;
+    left: 4.4vw;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: #999;
+    transition: all 0.3s ease;
+    z-index: 911199;
+}
+
+#registrationForm input:focus+label,
+#registrationForm input:not(:placeholder-shown)+label {
+    top: -1vh;
+    left: 3.3vw;
+    font-size: 15px;
+    color: #FFCC00;
+    font-weight: 430;
+    z-index: 991119;
+}
+
+#registrationForm input::placeholder {
+    visibility: hidden;
+    z-index: 991119;
 }
 
 /* Estilo para inputs de número, data e selects */
@@ -647,7 +456,7 @@ select:hover option:hover {
     display: flex;
     justify-self: center;
     width: 80%; /* Garante largura igual para todos os campos */
-    padding: 1.5vh 2vw; /* Usando vh e vw para tamanho proporcional */
+    padding: 1.5vh 2vw;  /* Usando vh e vw para tamanho proporcional */
     border: 1px solid #FFCC00;
     border-radius: 5px;
     outline: none;
@@ -656,18 +465,37 @@ select:hover option:hover {
     margin-top: 2rem;
 }
 .input-container select{
-    width: 81%; /* Garante largura igual para todos os campos */
-    padding: 1.5vh 2vw; /* Usando vh e vw para tamanho proporcional */
-    border: 1px solid #FFCC00;
+    display: flex;
+    justify-self: center;
+    align-content: center;
+    margin-left: 1vw;
+    width: 80%;
+    padding: 12px;
+    font-size: 16px;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    font-size: 1.5vw;
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
     outline: none;
-    top: 4vh;
-    font-size: 1.2vw;
-    color: black;
-    background-color: #fafafa;
-    transition: border-color 0.3s ease;
+    z-index: 9911119;
 }
+
+select #numb_lote{
+    display: flex;
+    justify-self: center;
+    align-content: center;
+    margin-left: 1vw;
+    width: 80%;
+    padding: 12px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+    outline: none;
+    z-index: 9911119;
+}
+
 .input-container option{
     color: #FFCC00;
 }
@@ -716,7 +544,7 @@ select:hover option:hover {
 .input-container #quantity_hint {
     font-size: 1.2vw;
     color: #555;
-    margin-top: -0.1vw;
+    margin-top: 1vw;
 }
 
 
@@ -744,11 +572,7 @@ select:hover option:hover {
 }
 
 #submitButton:hover {
-    border-color:#FFCC00 ;
-    border-style: solid;
-    border-width: 0.2493vh;
-    color: #FFCC00;
-    background-color: white;
+    transform: scale(1.06);
     transition: 0.2s ease;
     z-index: 999;
 }
@@ -834,20 +658,25 @@ select:hover option:hover {
     display: flex;
     width: 100%;
     justify-self: center;
-    padding: 10px 20px;
     font-size: 16px;
     font-weight: 520;
     height: auto;
     color: #FFCC00;
     margin-top: -65.7vh;
     cursor: pointer;
-    justify-content: center; /* Centraliza os elementos horizontalmente */
-    align-items: center; /* Alinha os elementos verticalmente */
-    gap: 0.5%; /* Espaçamento entre os itens */
-    padding: 0; /* Remove preenchimentos extras */
-    border-radius: 1vh; /* Bordas arredondadas */
+    justify-content: center;
+    /* Centraliza os elementos horizontalmente */
+    align-items: center;
+    /* Alinha os elementos verticalmente */
+    gap: 0.5%;
+    /* Espaçamento entre os itens */
+    padding: 0;
+    /* Remove preenchimentos extras */
+    border-radius: 1vh;
+    /* Bordas arredondadas */
+    margin-top: -69vh;
  
-    
+   
 }
 
 
@@ -877,13 +706,13 @@ select:hover option:hover {
     width: 100%;
     max-width: 800px;
   }
-  
+ 
   .title {
     white-space: nowrap;
     margin-right: 1vh;
     font-size: larger;
   }
-  
+ 
   .divider {
     flex-grow: 2;
     border-top: 0.7vh dashed #000;
@@ -919,13 +748,13 @@ select:hover option:hover {
 .table-container::-webkit-scrollbar {
     width: 0.6vw; /* largura da barra */
   }
-  
+ 
 .table-container::-webkit-scrollbar-thumb {
     width: 2vw;
     background: #FFCC00; /* cor do "polegar" da barra */
     border-radius: 2vw; /* arredondamento */
   }
-  
+ 
 .table-container::-webkit-scrollbar-thumb:hover {
     background: #c8a001; /* cor ao passar o mouse */
   }
@@ -940,14 +769,14 @@ select:hover option:hover {
     justify-content: space-between;
     align-items: center;
     border: 1px solid #FFCC00;
-    border-radius:0.5vw;
+    border-radius: 0.5vw;
     padding: 15px 20px;
     cursor: pointer;
     background-color: #fafafa;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 5px; /* Adiciona um pequeno espaçamento entre as linhas principais */
 }
-    
+   
 
 .cell {
     display:flex;
@@ -1020,4 +849,16 @@ select:hover option:hover {
 
 .detail-item span {
     color: #888;
+}
+
+/* FOOTER */
+.footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 3vh;
+}
+
+.footer img {
+    height: auto;
+    width: 35vh;
 }
